--- a/views/vendorCreateAuction.ejs
+++ b/views/vendorCreateAuction.ejs
@@ -51,10 +51,9 @@
         
         .nav-logo img {
             height: 40px;
-            width: 40px;
+            width: auto;
             margin-right: 10px;
-            border-radius: 50%;
-            object-fit: cover;
+            object-fit: contain;
         }
         
         .nav-right {
