removed gst from the page

--- a/views/auctions.ejs
+++ b/views/auctions.ejs
@@ -697,7 +697,7 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="duration">Duration (hours):</label>
+                        <label for="duration">Duration (minutes):</label>
                         <input type="number" name="duration" id="duration" min="1" max="24" value="2" required>
                     </div>
                     
